Fix extra gap below navbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  padding-top: 80px; 
+  padding-top: 100px; 
 }
 
 
@@ -115,7 +115,7 @@ body {
 }
 .menu-bar {
   background-color: #222;
-  margin-top: 80px;
+  /* margin-top: 80px; */
 }
 
 .menu-bar ul {
